--- a/index.html
+++ b/index.html
@@ -6,39 +6,108 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link type="text/css" rel="stylesheet" href="main.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+<body class="min-vh-100 d-flex justify-content-between flex-column">
+<header class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none fs-4">
+        FruitSalad
+    </a>
 
-<body>
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 link-secondary">Accueil</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Les fruits</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">A propos</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Contact</a></li>
+    </ul>
 
-<div id="info">
-    <div id="price">0€</div>
+    <div class="col-md-3 text-end">
+        <button type="button" class="btn btn-primary">Nous visiter</button>
+    </div>
+</header>
 
-    <div id="plateSelector">
-        <button id="small">
-            Small plate
-        </button>
+<main class="container px-4 text-center flex-grow-1">
+    <div class="my-5">
+        <h1 class="display-4 fw-bold">Composez votre salade de fruit!</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">
+                Utilisez notre composeur de salade de fruit, et visualisez-la avant de passer commande!
+            </p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Composeur</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Commander</button>
+            </div>
+        </div>
+        <div class="px-5">
+            <div class="compositor img-fluid border rounded-3 shadow-lg mb-4">
+                <div id="info" class="d-flex">
+                    <div id="price" style="display: block">0€</div>
 
-        <button id="medium">
-            Medium plate
-        </button>
+                    <div id="plateSelector" class="flex-grow-1" style="display: block">
+                        <button class="btn btn-primary btn-sm" id="small">
+                            Small plate
+                        </button>
 
-        <button id="large">
-            Large plate
-        </button>
+                        <button class="btn btn-primary btn-sm" id="medium">
+                            Medium plate
+                        </button>
+
+                        <button class="btn btn-primary btn-sm" id="large">
+                            Large plate
+                        </button>
+                    </div>
+
+                    <div id="compositor" class="flex-grow-1" style="display: none">
+                        <button class="btn btn-primary btn-sm" id="strawberry">
+                            Ajouter une fraise
+                        </button>
+
+                        <button class="btn btn-primary btn-sm" id="banana">
+                            Ajouter une banane
+                        </button>
+                    </div>
+                </div>
+
+                <canvas id="threejs" class="rounded-3"></canvas>
+            </div>
+        </div>
     </div>
 
-    <div id="compositor" style="display: none">
-        <button id="strawberry">
-            Add strawberry
-        </button>
+    <div class="my-5">
+        <h1 class="border-bottom">Les fruits</h1>
 
-        <button id="banana">
-            Add banana
-        </button>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="feature col">
+                <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                    <img src="/images/banana.png" class="rounded-3 w-100">
+                </div>
+                <h2>Banane</h2>
+                <p>La banane est le fruit ou la baie dérivant de l’inflorescence du bananier. Les bananes sont des fruits très généralement stériles issus de variétés domestiquées.</p>
+            </div>
+            <div class="feature col">
+                <div class="feature-icon d-inline-flex align-items-center justify-content-center rounded-3 fs-2 mb-3">
+                    <img src="/images/strawberry.png" class="rounded-3 w-100">
+                </div>
+                <h2>Fraise</h2>
+                <p>La fraise est un fruit rouge issu des fraisiers, espèces de plantes herbacées appartenant au genre Fragaria, dont plusieurs variétés sont cultivées.</p>
+            </div>
+            <div class="feature col">
+                <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+                    <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+                </div>
+                <h2>Kiwi</h2>
+                <p>Les kiwis sont des fruits de plusieurs espèces de lianes du genre Actinidia, famille des Actinidiaceae. Ils sont originaires de Chine, notamment de la province de Shaanxi.</p>
+            </div>
+        </div>
     </div>
-</div>
+</main>
 
-<canvas id="threejs"></canvas>
+<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+        <span class="mb-3 mb-md-0 text-muted">© 2022 FruitSalad, Inc</span>
+    </div>
+</footer>
 
 <script src="threejs/stats.min.js"></script>
 <script src="threejs/dat.gui.min.js"></script>
