--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2 link-secondary">Accueil</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Les fruits</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">A propos</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Contact</a></li>
+        <li><a href="#fruits" class="nav-link px-2 link-dark">Les fruits</a></li>
     </ul>
 
     <div class="col-md-3 text-end">
@@ -35,8 +33,8 @@
                 Utilisez notre composeur de salade de fruit, et visualisez-la avant de passer commande!
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Composeur</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Commander</button>
+                <a href="#threejs" type="button" class="btn btn-primary btn-lg px-4 me-sm-3 text-decoration-none">Composeur</a>
+                <a href="#" type="button" class="btn btn-outline-secondary btn-lg px-4 text-decoration-none">Commander</a>
             </div>
         </div>
         <div class="px-5">
@@ -46,15 +44,15 @@
 
                     <div id="plateSelector" class="flex-grow-1" style="display: block">
                         <button class="btn btn-primary btn-sm" id="small">
-                            Small plate
+                            Petite boite
                         </button>
 
                         <button class="btn btn-primary btn-sm" id="medium">
-                            Medium plate
+                            Boite moyenne
                         </button>
 
                         <button class="btn btn-primary btn-sm" id="large">
-                            Large plate
+                            Grande boite
                         </button>
                     </div>
 
@@ -75,7 +73,7 @@
     </div>
 
     <div class="my-5">
-        <h1 class="border-bottom">Les fruits</h1>
+        <h1 class="border-bottom" id="fruits">Les fruits</h1>
 
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
