--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                         <button class="btn btn-primary btn-sm" id="banana">
                             Ajouter une banane
                         </button>
+
+                        <button class="btn btn-primary btn-sm" id="kiwi">
+                            Ajouter un kiwi
+                        </button>
                     </div>
                 </div>
 
