--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <p>La fraise est un fruit rouge issu des fraisiers, espèces de plantes herbacées appartenant au genre Fragaria, dont plusieurs variétés sont cultivées.</p>
             </div>
             <div class="feature col">
-                <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+                <div class="feature-icon d-inline-flex align-items-center justify-content-center rounded-3 fs-2 mb-3">
+                    <img src="/images/kiwi.png" class="rounded-3 w-100">
                 </div>
                 <h2>Kiwi</h2>
                 <p>Les kiwis sont des fruits de plusieurs espèces de lianes du genre Actinidia, famille des Actinidiaceae. Ils sont originaires de Chine, notamment de la province de Shaanxi.</p>
