remove plate selection

--- a/index.html
+++ b/index.html
@@ -42,21 +42,7 @@
                 <div id="info" class="d-flex">
                     <div id="price" style="display: block">0€</div>
 
-                    <div id="plateSelector" class="flex-grow-1" style="display: block">
-                        <button class="btn btn-primary btn-sm" id="small">
-                            Petite boite
-                        </button>
-
-                        <button class="btn btn-primary btn-sm" id="medium">
-                            Boite moyenne
-                        </button>
-
-                        <button class="btn btn-primary btn-sm" id="large">
-                            Grande boite
-                        </button>
-                    </div>
-
-                    <div id="compositor" class="flex-grow-1" style="display: none">
+                    <div id="compositor" class="flex-grow-1" style="display: block">
                         <button class="btn btn-primary btn-sm" id="strawberry">
                             Ajouter une fraise
                         </button>
